--- a/blog.css
+++ b/blog.css
@@ -116,7 +116,7 @@ img {
 }
 
 .background_layer_C {
-    background-image: url(panda6.JPG);
+    background-image: url(panda6.png);
     background-position: center;
     background-size: cover;
     width: 650px;
